Updated code style. Removed all warnings and depcrecation warnings.