@@ -5,6 +5,7 @@ import com.google.gson.JsonParser;
 
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.Map;
@@ -28,12 +29,26 @@ public class MojangAPI {
     // CATCHING NULL ILLEGALSTATEEXCEPTION BAD!!!! eventually fix from the getAsJsonObject thingy
     public static String[] pullFromAPI(String name) {
         try {
-            String uuid = new JsonParser().parse(new InputStreamReader(new URL("https://api.mojang.com/users/profiles/minecraft/" + name)
-                    .openStream())).getAsJsonObject().get("id").getAsString();
-            JsonObject property = new JsonParser()
-                    .parse(new InputStreamReader(new URL("https://sessionserver.mojang.com/session/minecraft/profile/" + uuid + "?unsigned=false")
-                            .openStream())).getAsJsonObject().get("properties").getAsJsonArray().get(0).getAsJsonObject();
-            return new String[] {property.get("value").getAsString(), property.get("signature").getAsString()};
+            // Get UUID from Mojang API
+            URL uuidURL = URI.create("https://api.mojang.com/users/profiles/minecraft/" + name).toURL();
+            String uuid = JsonParser.parseString(String.valueOf(new InputStreamReader(uuidURL.openStream())))
+                    .getAsJsonObject()
+                    .get("id")
+                    .getAsString();
+
+            // Get skin data from session server
+            URL sessionURL = URI.create("https://sessionserver.mojang.com/session/minecraft/profile/" + uuid + "?unsigned=false").toURL();
+            JsonObject property = JsonParser.parseString(String.valueOf(new InputStreamReader(sessionURL.openStream())))
+                    .getAsJsonObject()
+                    .get("properties")
+                    .getAsJsonArray()
+                    .get(0)
+                    .getAsJsonObject();
+
+            return new String[] {
+                    property.get("value").getAsString(),
+                    property.get("signature").getAsString()
+            };
         } catch (IOException | IllegalStateException e) {
             return null;
         }
